src/css/alice.scss
/* ... */
div.msg img.audio {
  cursor: pointer;
  display: inline;
  padding: 0 4px;
  width: 16px;
  height: 16px;
  margin-bottom: -3px;
}

a.nick {
  color: $nicks;
  text-decoration: none;
}

div.tab_button {
  width: 16px;
  height: 16px;
  float: left;
  margin-right: 6px;
}

li.channel_tab div.tab_button {
  background: url(image/sprites.png) 0px -80px no-repeat;
}

li.privmsg_tab div.tab_button {
  background: url(image/sprites.png) 0px -120px no-repeat;
}

li.info_tab div.tab_button {
  background: url(image/sprites.png) 0px 0px no-repeat;
}

ul#tabs li.disabled.channel_tab div.tab_button:hover,
ul#tabs li.active div.tab_button:hover {
  background: url(image/sprites.png) 1px -260px no-repeat;
}

ul#tabs li.unread.channel_tab div.tab_button {
  background: url(image/sprites.png) 0px -20px no-repeat;
}

ul#tabs li.unread.privmsg_tab div.tab_button {
  background: url(image/sprites.png) 0 -100px no-repeat;
}

ul#tabs li.highlight.channel_tab div.tab_button {
  background: url(image/sprites.png) 0 -40px no-repeat;
}

ul#tabs li.disabled.channel_tab div.tab_button {
  background: url(image/sprites.png) 0 -60px no-repeat;
}

div#help {
  position: absolute;
  z-index: 980;
  background: rgba(0,0,0,0.8);
  color: #fff;
  left: 20px;
  right: 20px;
  top: 25px;
  bottom: 60px;
  padding: 10px 20px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  text-shadow: 0 0 3px rgba(0,0,0,0.9);
}

div#help div#helpclose {
  position: absolute;
  top: 17px;
  right: 20px;
  color: rgba(255, 255, 255, 0.75);
  font-size: 9px;
  letter-spacing: 1px;
  text-shadow: none;
  text-transform: uppercase;
}

div#help div#helpclose:hover {
  cursor: pointer;
  color: #fff;
}

div#help div#topics {
  position: absolute;
  top: 34px;
  bottom: 15px;
  left: 20px;
  right: 20px;
  overflow-y: auto;
  overflow-x: hidden;
}

div#help h1 {
  margin: 0;
  font-size: 20px;
  border-bottom: 1px solid #999;
  font-weight: normal;
}

div#help dl {
  width: 47%;
  font-size: 12px;
  margin-top: 0;
  padding-top: 10px;
  float: left;
  display: block;
  border-right: 1px solid #666;
  padding-right: 2%;
}

div#help dl#shortcuts {
  border-right: none;
  float: right;
  padding-right: 0;
  padding-left: 2%;
}

div#help h2 {
  color: yellow;
  margin-top: 0;
  font-weight: normal;
}

div#help dt {
  font-weight: bold;
}

div#help dd {
  font-weight: normal;
  margin: 0;
  margin-bottom: 10px
}
div.color_picker {
  position: absolute;
  right: 52px;
  bottom: 51px;
  width: 80px;
  border-bottom: none;
  margin: 0;
  padding: 0;
  z-index: 903;
}
div.color_picker span {
  cursor: pointer;
}
div.color_picker div.colors {
  clear: both;
}
div.color_picker div.colors span {
  float: left;
  display: block;
  width: 20px;
  height: 20px;
  margin: 0;
  -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.6);
  -moz-box-shadow: 0 0 3px rgba(0,0,0,0.6);
  box-shadow: 0 0 3px rgba(0,0,0,0.6);
}
div.color_picker div.toggle {
  height: 18px;
}
div.color_picker div.toggle span.blank {
  float: right;
  color: red;
  font-weight: bold;
  text-align: center;
  width: 20px;
  line-height: 9px;
}

div.color_picker div.toggle span#fg,
div.color_picker div.toggle span#bg {
  float: left;
  font-size: 9px;
  background: none;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  color: $textentry_toolbar_toggle_color;
  text-align: center;
  padding: 2px 5px;
}

div.color_picker div.toggle span#fg.active,
div.color_picker div.toggle span#bg.active {
  background: $textentry_toolbar_toggle_active_background;
  color: $textentry_toolbar_toggle_active_color;
}

@media screen and (max-device-width: 480px) {
  div.left {
    width: 40px !important;
    padding-right: 0px !important;
  }

  div.msg {
    margin-left: 44px !important;
  }

  div.window {
    bottom: 30px;
  }

  ul#tabs_container {
    display: none;
  }

  ul#controls {
    padding-right: 0;
    background: none;
    position: absolute;
    bottom: 2px;
    right: 1px;
  }

  ul#controls li#connection_status, ul#controls li#config_menu {
    display: none;
  }

  div#input {
    bottom: 0px;
    border-bottom: none;
  }

  div#input div {
    margin-right: 80px;
    background: none;
  }

  div#input input.send {
    display: block;
    position: absolute;
    bottom: 0px;
    right: 26px;
    z-index: 904;
  }

  div.msg.monospace, div.msg.announce {
    line-height: 11px;
  }

  div.msg img {
    border: none;
    max-width: 150px;
    max-height: 150px;
  }
}

div.config {
  position: absolute;
  top: 50%;
  left: 50%;
  background: $tab_background_active;
  padding-bottom: 29px;
  z-index: 981;
  -webkit-box-shadow: 1px 1px 3px #000;
  -moz-box-shadow: 1px 1px 3px #000;
  box-shadow: 1px 1px 3px #000;
  border: 5px solid $tab_border_active;
}

div.config#prefs {
  padding-bottom: 29px;
  width: 326px;
  height: 284px;
  margin-left: -178px;
  margin-top: -162px;
}

div.config#servers {
  width: 460px;
  height: 380px;
  margin-left: -230px;
  margin-top: -210px;
}

div.config#tabsets {
  width: 300px;
  height: 200px;
  margin-left: -155px;
  margin-top: -120px;
}

div.config div.buttons {
  clear: both;
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  padding: 2px 10px;
  height: 24px;
  background: $tab_text_blurred;
  border: 1px solid $tab_background_hover;
  border-top: none;
}

div.config div.buttons button {
  float: right;
}

div.config div.config_body table {
  display: none;
}

div.config div.config_body table.active {
  display: table;
}

div.config_body table td {
  vertical-align: top;
  padding: 10px 0px 0px 10px;
}

div.config_body table table td {
  padding: 0 0 5px 0;
}

div.config label, div.config input {
  display: block;
  font-size: 0.8em;
}

div.config span {
  font-size: 0.8em;
}

div.config select {
  width: 135px;
  font-size: 0.8em;
  outline: 0 none;
}

div.config select[multiple] {
  height: 70px;
  background: $textentry_background;
  color: $default_text;
}
/* ... */

